--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -1,10 +1,9 @@
 /*=======navigation=======*/
 
-.nav-right {
-  text-align: center;
-}
-.first {
-  margin-left: 50px;
+.container {
+  width: auto;
+  padding-right: 40px;
+  padding-left: 0;
 }
 .navbar-dark .navbar-nav .nav-link {
   color: #FFFFFF;
@@ -12,15 +11,9 @@
 .bg-dark {
   background-color: #282828 !important;
 }
-.fixed-top {
-  /*left: 60px;*/
-  /*right: 60px;*/
-}
 .nav-item {
-  height: 16px;
+  height: 40px;
   font-size: 18px;
-  font-weight: 500;
-  line-height: 20px;
 }
 .form-inline .form-control {
   margin-left: 60px;
@@ -30,41 +23,53 @@
   background-color: #FFFFFF;
   box-shadow: 0 4px 8px 0 rgba(232,79,60,0.62);
 }
-
+.profile {
+  cursor: pointer;
+  padding: 0;
+}
 .avatar {
   border-radius: 50%;
   width: 40px;
-  height: 40px;
 }
-
 li {
-  list-style: none;
   display: inline-block;
   color: #FFFFFF
+}
+.dropdown-toggle::after {
+  display: none;
+}
+.dropdown-menu {
+  top: 100%;
+  left: 100px;
+  z-index: 1000;
+  min-width: 10rem;
+  padding: .5rem 0;
+  margin: .125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem;
 }
 
 /*=======END navigation=======*/
 
-
-.fixedbut {
+.chat-btn {
   position: fixed;
   bottom: 90px;
   right: 20px;
   display: block;
-  //background: #2db700;
-  color: #fff;
+  color: #2F4F4F;
   text-decoration: none;
   padding: 5px 15px;
   font-size: 36px;
   z-index: 999;
-  //border-radius: 50%;
-  //width: 50px;
-  //height: 50px;
 }
-.fixedbut:hover {
-  background: #2db700;
-}
-
-.fixedbut:hover {
+.chat-btn:hover {
+  border-radius: 50%;
   background: #222;
+  color: #fff;
 }
