--- a/src/app/component/auth/login/login.component.scss
+++ b/src/app/component/auth/login/login.component.scss
@@ -7,12 +7,10 @@
   border-radius: 2px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  font-family: Roboto;
 }
 .login-container h1 {
   text-align: center;
   font-size: 1.8em;
-  font-family: Roboto;
 }
 .login {
   text-align: center;
@@ -51,21 +49,19 @@ button {
   margin-bottom: 10px;
   margin-top: 15px;
 }
+.btn-social {
+  margin-top: 5px;
+}
 .fa {
   position: absolute;
   color: #ffffff;
   z-index: 1;
   cursor: pointer;
-}
-.fa-facebook {
-  top: 215px;
   font-size: 28px;
-  left: 502px;
+  padding: 10px 17px;
 }
-.fa-google {
-  top: 275px;
-  left: 500px;
-  font-size: 28px;
+.btn-twitter {
+  background-color: #00acee;
 }
 .text-or {
   text-align: center;
