--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ body {
   background: url("assets/img/BG.svg") top left/cover no-repeat fixed;
   margin-top: 100px;
   font-family: 'Gotham Pro', sans-serif !important;
+  line-height: 1.15;
 }
 .card {
   margin-top: 20px;
