fix chat component

--- a/src/app/component/player/player.component.html
+++ b/src/app/component/player/player.component.html
@@ -21,7 +21,7 @@
         <i class="fa fa-plus nav-link fa-vc"></i>
       </li>
       <div class="info-music">
-        <p>Autor</p>
+        <p>Singer</p>
         <p>Description</p>
       </div>
       <li class="nav-item">
