fix avatar in users component

--- a/src/app/component/user/user-list-item/user-list-item.component.scss
+++ b/src/app/component/user/user-list-item/user-list-item.component.scss
@@ -1,10 +1,14 @@
 mat-card {
   margin: 10px;
-  width: 300px;
+  width: 500px;
 }
 mat-card-content, mat-card-actions {
   margin: 1em;
 }
 .user-title {
   margin-left: 1em;
+}
+.photo-user {
+  width: 50%;
+  height: 50%;
 }
