--- a/src/app/component/user/user-list-item/user-list-item.component.html
+++ b/src/app/component/user/user-list-item/user-list-item.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="user">
   <mat-card routerLink="{{user.uid}}">
     <mat-card-header>
-      <img [src]="user.photoURL || '//:0'" alt="{{user.displayName}}">
+      <img class="photo-user" [src]="user.photoURL || '//:0'" alt="{{user.displayName}}">
       <div class="user-title">
         <mat-card-title>{{user.displayName}}</mat-card-title>
         <mat-card-subtitle>{{user.email}}</mat-card-subtitle>
